--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,24 @@
 <html> 
     <head> 
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/> 
-        <title>Геннадий Злобин - Главная страница</title> 
-        <link href="2009.css" type="text/css" rel="stylesheet"></link> 
-<script type="text/javascript" src="/static/js/jquery.js"></script>
+        <title>Kitty Quotes</title> 
+        <link href="/static/css/style.css" type="text/css" rel="stylesheet"></link> 
+        <script type="text/javascript" src="/static/js/jquery.js"></script>
     </head> 
     <body> 
-        <h1>Gennadiy Zlobin - Personal Home Page</h1>        
-        <h3>About me</h3>
-        Hi all! Nice to see you here. My name is Gennadiy Zlobin.
-
-
-        <div>My project</div>
-        <div>Resume</div>
-        <div>My bio</div>
-
-        My blogs:
-        :
+        <div>
+            <div id="header">
+            <h1>Kitty's Quotes</h1>        
+        </div>
+        <div id="photo">
+            <img id="kitty" src="/static/img/kitty.jpg"/>
+        </div>
+        <div id="content">
+            <h1 id="start_quote">"</h1>
+                <blockquote>{{ quote  }}</blockquote>
+            <h1 id="end_quote">"</h1>
+        </div>
+        <div id="footer">
+        </div>
     </body>
-
-
 </html>
